<resources>
    <string name="app_name">Bricole</string>
    <string name="login">Login</string>
    <string name="singUp">Sing Up</string>
    <string name="hint_username">Submit Your Username</string>
    <string name="getStarted">Get Started</string>
    <string name="hint_sbm_mail">Submit Your Email Address</string>
    <string name="hint_sbm_pass">Submit Your Password</string>
    <string name="GetStarted_haveAcount">I already have an account</string>
    <string name="craftsman">CraftsMan</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edite_profile">Edite Profile</string>
    <string name="logout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>