<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c4c4c0"
    android:paddingHorizontal="10dp"
    android:paddingVertical="14dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="299dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/login"
        tools:layout_editor_absoluteY="-49dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:background="@drawable/rounded_corner"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/singUp"
        app:layout_constraintEnd_toEndOf="@+id/InputPasswordLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/InputPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/InputPasswordLogin" />

    <EditText
        android:id="@+id/InputEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/hint_sbm_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <EditText
        android:id="@+id/InputPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/hint_sbm_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/InputUsername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/InputUsername"
        app:layout_constraintTop_toBottomOf="@+id/InputUsername" />

    <EditText
        android:id="@+id/InputUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_username"
        android:autofillHints="username"
        app:layout_constraintEnd_toEndOf="@+id/InputEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/InputEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/InputEmailLogin" />

    <RadioGroup
        android:id="@+id/UserRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="@+id/InputPasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/InputPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/InputPasswordLogin">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craftsman"
            android:id="@+id/craftsman"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:id="@+id/User"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>